--- a/index.html
+++ b/index.html
@@ -15,13 +15,37 @@
 </head>
 
 <body>
+    <div class="container-fluid bg-danger p-0">
 
+        <div class=" m-auto header d-flex align-items-end  ">
+            <h1>Bookmark </h1>
+        </div>
 
+        <div class="container   d-flex align-items-center bg-success p-5 ">
 
+            <div class=" w-100 m-auto bg-light text-center p-5 shadow">
+                <h1 class="mb-5">Bookmark your favorite sites </h1>
+
+                <label for=" sname " class="mb-3 lbl">Site Name</label>
+                <input type="text" id="sname" class="form-control mb-3">
+
+                <label for=" sname " class="mb-3 lbl">Site URL</label>
+                <input type="text" id="sname" class="form-control mb-3">
+
+                <button class="btn btn-info lbl">add site</button>
+            </div>
+
+        </div>
+
+        <div class="m-auto footer d-flex align-items-end pb-4 ">
+            <h1>Bookmark </h1>
+        </div>
+
+    </div>
     <!-- my script -->
-    <script src="script.js"></script>
+    <script src="script.js "></script>
     <!-- bootstrap script -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js " integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM " crossorigin="anonymous "></script>
 
 </body>
 
