--- a/index.html
+++ b/index.html
@@ -9,46 +9,51 @@
     <link rel="stylesheet" href="style.css">
     <!-- bootstrab style -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <!-- favicon -->
+    <!-- sweetalert -->
+    <link rel="stylesheet" href="sweetalert2.min.css">
 
     <title>MarkBook</title>
 </head>
 
 <body>
-    <div class="container-fluid bg-danger p-0">
+    <div class=" m-auto header d-flex align-items-end  ">
+        <h1>Bookmark </h1>
+    </div>
+    <div class="container bg-success p-5 ">
+        <form class=" bg-light text-center p-5 shadow  mb-4" id="form">
 
-        <div class=" m-auto header d-flex align-items-end  ">
-            <h1>Bookmark </h1>
-        </div>
+            <h1 class="mb-5">Bookmark your favorite sites </h1>
 
-        <div class="container    bg-success p-5   ">
-
-            <div class=" w-100 m-auto bg-light text-center p-5 shadow d-block mb-4">
-                <h1 class="mb-5">Bookmark your favorite sites </h1>
-
+            <div class="form-group">
                 <label for=" sname " class="mb-3 lbl">Site Name</label>
-                <input type="text" id="sname" class="form-control mb-3 ">
-
-                <label for=" sname " class="mb-3 lbl">Site URL</label>
-                <input type="text" id="surl" class="form-control mb-3">
-
-                <button class="btn btn-info lbl" id="btn" onclick="add()">add site</button>
+                <input type="text" id="sname" class="form-control mb-3  " required autocomplete="of">
             </div>
+            <div class="form-group">
+                <label for=" sname " class="mb-3 lbl">Site URL</label>
+                <input type="url" id="surl" class="form-control mb-3" placeholder="https://example.com" required autocomplete="of" pattern="(https?|/).*?">
+            </div>
+            <button type="submit" class="btn btn-primary" id="btn" onclick="add()">Submit</button>
+        </form>
 
-            <div id="content"></div>
+        <div id="content">
 
         </div>
 
-        <div class="m-auto footer d-flex align-items-end pb-4 ">
-            <h1>Bookmark </h1>
-        </div>
+    </div>
+
+
+
+    <div class="m-auto footer d-flex align-items-end pb-4 ">
+        <h1>Bookmark </h1>
+    </div>
 
     </div>
     <!-- my script -->
     <script src="script.js "></script>
     <!-- bootstrap script -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js " integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM " crossorigin="anonymous "></script>
-
+    <!-- swal -->
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 
 </html>
