--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </div>
             <button type="submit" class="btn btn-primary" id="btn" onclick="add()">Submit</button>
         </form>
-
+        <input type="text" id="search" class="form-control" placeholder=" search ......  ">
         <div id="content">
 
         </div>
